--- a/GameDB-v3/Views/Usuario/Cadastro.cshtml
+++ b/GameDB-v3/Views/Usuario/Cadastro.cshtml
@@ -91,6 +91,8 @@
 
 @section Scripts {
     <script>
+        //TODO: adicionar loading
+
         $('#btnSalvar').on('click', function () {
             $.ajax({
                 url: '/Usuario/Cadastro',
