--- a/GameDB-v3/Views/RegistroJogo/Index.cshtml
+++ b/GameDB-v3/Views/RegistroJogo/Index.cshtml
@@ -129,11 +129,11 @@
                         </div>
 
                         <div class="col" id="inputJogado">
-                            <label for="DataUltimaSessao" class="form-label">Última Sessão</label>
+                            <label for="UltimaSessao" class="form-label">Última Sessão</label>
                             <input type="text"
                                    class="form-control date"
-                                   id="DataUltimaSessao"
-                                   name="DataUltimaSessao">
+                                   id="UltimaSessao"
+                                   name="UltimaSessao">
                         </div>
                     </div>
 
