--- a/GameDB-v3/wwwroot/css/site.css
+++ b/GameDB-v3/wwwroot/css/site.css
@@ -1,7 +1,7 @@
 :root {
     --mainblue-dark: #0f172a;
     --mainblue: #21335f;
-    --darkblue: #001bff;
+    --darkblue: #0f172a;
     --orange: #ffa900;
     --brown: #6a5100;
     --darkgray: #6b6a6a;
