--- a/GameDB-v3/Views/Usuario/Index.cshtml
+++ b/GameDB-v3/Views/Usuario/Index.cshtml
@@ -5,36 +5,17 @@
 }
 
 <div class="row">
-    <div class="col">
+    <div class="col-12 col-sm-4">
         <h4 class="fw-bold">Olá, @Model.Usuario!</h4>
     </div>
     <div class="col text-end">
-        <form class="" id="pesquisar">
-            <div class="row justify-content-end g-2">
-                <div class="col">
-                    <input type="text" id="titulo" name="titulo" class="form-control" placeholder="Pesquisar jogo" />
-                </div>
-                <div class="col">
-                    <select name="Status" id="Status" class="form-select" required>
-                        <option>TODOS</option>
-                        <option value="1">Jogando</option>
-                        <option value="2">História Principal concluída</option>
-                        <option value="3">História Principal + secundárias concluídas</option>
-                        <option value="9">Todas as Conquistas obtidas (Platina)</option>
-                        <option value="0">Abandonado</option>
-                    </select>
-                </div>
-
-                <div class="col-auto">
-                    <button type="submit" class="btn btn-secondary" id="pesquisar-jogos">Pesquisar</button>
-                </div>
-                <div class="col-auto">
-                    <a role="button" class="btn btn-primary" asp-action="Index" asp-controller="Rawg">Adicionar</a>
-                </div>
-            </div>
-        </form>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-pesquisar">
+            Pesquisar
+        </button>
+        <a role="button" class="btn btn-primary" asp-action="Index" asp-controller="Rawg">Adicionar</a>
     </div>
 </div>
+
 @await Component.InvokeAsync("ResumoJogador")
 
 <hr class="my-3" />
@@ -46,12 +27,85 @@
     <span class="spinner-border" role="status"></span>
 </div>
 
+
+
+
+<!-- MODAL PESQUISA -->
+
+<div class="modal fade" id="modal-pesquisar" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modal-pesquisar" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="staticBackdropLabel">
+                    PESQUISAR JOGO
+                </h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form class="" id="pesquisar">
+                    <div class="row justify-content-end g-2">
+                        <div class="col-8">
+                            <input type="text" id="titulo" name="titulo" class="form-control" placeholder="Pesquisar jogo" />
+                        </div>
+
+                        <div class="col-4">
+                            <select name="ano" id="ano" class="form-select">
+                                <option selected>ANO</option>
+                                @await Component.InvokeAsync("DropAnos", new { usuarioId = this.User.GetUserId() })
+                            </select>
+                        </div>
+
+                        <div class="col-6">
+                            <select name="Status" id="Status" class="form-select">
+                                <option selected>SITUAÇÃO</option>
+                                <option value="1">Jogando</option>
+                                <option value="2">História Principal concluída</option>
+                                <option value="3">História Principal + secundárias concluídas</option>
+                                <option value="9">Todas as Conquistas</option>
+                                <option value="0">Abandonado</option>
+                            </select>
+                        </div>
+
+                        <div class="col-6">
+                            <select name="Ordem" id="Ordem" class="form-select">
+                                <option selected>Ordem</option>
+                                <option value="0">Ultima Sessao</option>
+                                <option value="4">Titulo</option>
+                                <option value="1">Situação</option>
+                                <option value="2">Data Zerado</option>
+                                <option value="3">Todas as Conquistas</option>
+                            </select>
+                        </div>
+
+                        <div class="col-auto">
+                        </div>
+
+                    </div>
+                </form>
+
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-secondary" form="pesquisar" id="pesquisar-jogos" data-bs-dismiss="modal">Pesquisar</button>
+                <button type="button" class="btn btn-secondary" id="limpar-pesquisa">Limpar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 @section Scripts {
     <script>
         $('#pesquisar').on('submit', function (e) {
             e.preventDefault()
             carregarTabela();
         });
+
+        $('#limpar-pesquisa').on('click', function(e){
+            $('#titulo').val(null)
+            $('#ano').val(null)
+            $('#Status').val(null)
+            $('#Ordem').val(null)
+            $('#pesquisar-jogos').click()
+        })
 
         $("#titulo").on('keyup', function (e) {
             e.preventDefault()
