--- a/GameDB-v3/Views/Rawg/Index.cshtml
+++ b/GameDB-v3/Views/Rawg/Index.cshtml
@@ -12,10 +12,14 @@
                 <input type="text" id="titulo" name="titulo" class="form-control" placeholder="Pesquisar jogo" />
             </div>
             <div class="col-auto">
-                <button type="button" class="btn btn-secondary" id="pesquisar-jogos">Pesquisar</button>
+                <button type="button" class="btn btn-primary" id="pesquisar-jogos">
+                    <i class="fa-solid fa-magnifying-glass"></i>&nbsp;
+                    Pesquisar</button>
             </div>
             <div class="col-auto">
-                <a asp-action="Index" asp-controller="Usuario" class="btn btn-secondary">Voltar</a>
+                <a asp-action="Index" asp-controller="Usuario" class="btn btn-secondary">
+                    <i class="fa-solid fa-reply"></i>&nbsp;
+                    Voltar</a>
             </div>
         </div>
     </form>
