--- a/GameDB-v3/Views/Jogo/Registro.cshtml
+++ b/GameDB-v3/Views/Jogo/Registro.cshtml
@@ -1,4 +1,4 @@
-﻿@model JogoModel
+﻿@* @model JogoModel
 
 
 <div class="row mb-2">
@@ -69,7 +69,6 @@
         <div class="col-auto">
             <button type="button" asp-controller="Usuario" asp-action="Index" class="btn btn-secondary">
                 <i class="fa-solid fa-reply"></i>&nbsp;
-
                 Voltar</button>
         </div>
     </div>
@@ -81,3 +80,4 @@
         alert("Página encontrada!");
     </script>
 }
+ *@
