--- a/GameDB-v3/Views/Rawg/Index.cshtml
+++ b/GameDB-v3/Views/Rawg/Index.cshtml
@@ -12,7 +12,7 @@
                 <input type="text" id="titulo" name="titulo" class="form-control" placeholder="Pesquisar jogo" />
             </div>
             <div class="col-auto">
-                <button type="button" class="btn btn-primary" id="pesquisar-jogos">
+                <button type="submit" class="btn btn-primary" id="pesquisar-jogos">
                     <i class="fa-solid fa-magnifying-glass"></i>&nbsp;
                     Pesquisar</button>
             </div>
