--- a/GameDB-v3/Views/Usuario/Cadastro.cshtml
+++ b/GameDB-v3/Views/Usuario/Cadastro.cshtml
@@ -98,8 +98,8 @@
 {
     <form method="get" asp-action="VincularGoogle" asp-controller="GoogleLogin">
         <input type="hidden" name="usuarioId" value="@Model.ID" />
-        <button type="submit" class="google-material">
-            <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg">
+        <button type="submit" class="btn btn-light google-material border shadow shadow-sm">
+            <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" style="width: 20px;">
             Vincular conta
         </button>
     </form>
