--- a/GameDB-v3/Views/Shared/Components/Navbar/Default.cshtml
+++ b/GameDB-v3/Views/Shared/Components/Navbar/Default.cshtml
@@ -10,7 +10,10 @@
         <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
             <ul class="navbar-nav flex-grow-1">
                 <li class="nav-item">
-                    <a class="nav-link text-light" asp-area="" asp-controller="Usuario" asp-action="Index">Home</a>
+                    <a class="nav-link text-light" asp-area="" asp-controller="Usuario" asp-action="Index">HOME</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-light" asp-area="" asp-controller="Tierlist" asp-action="Index">TIERLIST</a>
                 </li>
             </ul>
             <div class="nav-item col-3 text-end me-3">
