--- a/GameDB-v3/Views/Shared/Components/Navbar/Default.cshtml
+++ b/GameDB-v3/Views/Shared/Components/Navbar/Default.cshtml
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-sm navbar-toggleable-sm shadow-lg bg-dark box-shadow mb-3">
     <div class="container-fluid">
-        <a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index">GamerLog</a>
+        <a class="navbar-brand text-light" asp-area="" asp-controller="Usuario" asp-action="Index">GamerLog</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
