Ajustes na integração com Google

--- a/GameDB-v3/Views/Usuario/Cadastro.cshtml
+++ b/GameDB-v3/Views/Usuario/Cadastro.cshtml
@@ -11,6 +11,7 @@
 
 <form method="post" id="form-cadastro">
     <input type="hidden" asp-for="ID" />
+    <input type="hidden" asp-for="GoogleId" />
 
     <div class="row mb-3">
         <div class="col">
