Ajuste no footer

--- a/GameDB-v3/Views/Shared/_Layout.cshtml
+++ b/GameDB-v3/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
 
     <footer class="footer text-muted border-top border-dark position-absolute bottom-0 w-100 mb-3">
         <div class="container d-flex gap-5 text-light mt-3">
-            <span>&copy; 2025 - Desenvolvido por Faé</span> <a class="link-light" href="https://portfolio2025-vm6w.onrender.com/" target="_blank">Sobre</a>
+            <span>&copy; GamerLog 2025 (v1.03). Todos os direitos reservados. - Desenvolvido por Faé</span> <a class="link-light" href="https://portfolio2025-vm6w.onrender.com/" target="_blank">Sobre</a>
         </div>
     </footer>
 
